--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -15,70 +15,70 @@ sqa_criteria:
     repos:
       github.com/grycap/im git:
         commands:
-        - /usr/bin/env sh .sqa/script.gimpy-green-sloth.sh
-        container: qc.acc_woolly-ochre-otter
+        - /usr/bin/env sh .sqa/script.crabby-black-mayfly.sh
+        container: qc.acc_snoopy-cerulean-leopard
   QC.Doc:
     repos:
       github.com/grycap/im find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.snazzy-olive-badger.sh
-        container: qc.doc_surly-indigo-setter
+        - /usr/bin/env sh .sqa/script.crabby-amber-armadillo.sh
+        container: qc.doc_muzzy-crimson-bordeaux
       github.com/grycap/im git:
         commands:
-        - /usr/bin/env sh .sqa/script.wiggy-eggplant-raccoon.sh
-        container: qc.doc_shabby-rust-coral
+        - /usr/bin/env sh .sqa/script.squeaky-cerise-shrew.sh
+        container: qc.doc_wheezy-asparagus-dog
       github.com/grycap/im markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.flaky-orchid-dugong.sh
-        container: qc.doc_queasy-turquoise-chinchilla
+        - /usr/bin/env sh .sqa/script.shaky-maroon-peccary.sh
+        container: qc.doc_messy-denim-panda
       github.com/grycap/im restructuredtext-lint:
         commands:
-        - /usr/bin/env sh .sqa/script.squirrely-russet-dachshund.sh
-        container: qc.doc_ready-amethyst-crocodile
+        - /usr/bin/env sh .sqa/script.beady-silver-neanderthal.sh
+        container: qc.doc_lanky-brown-civet
   QC.Lic:
     repos:
       github.com/grycap/im licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.sleepy-razzmatazz-tapir.sh
-        container: qc.lic_jumpy-olive-lemming
+        - /usr/bin/env sh .sqa/script.geeky-gold-dormouse.sh
+        container: qc.lic_flabby-rose-dog
   QC.Met:
     repos:
       github.com/grycap/im validate_codemeta:
         commands:
-        - /usr/bin/env sh .sqa/script.frumpy-turquoise-toad.sh
-        container: qc.met_messy-amethyst-bandicoot
+        - /usr/bin/env sh .sqa/script.ready-jade-capuchin.sh
+        container: qc.met_lumpy-wheat-coati
   QC.Sec:
     repos:
       github.com/grycap/im bandit:
         commands:
-        - /usr/bin/env sh .sqa/script.sleepy-buff-catfish.sh
-        container: qc.sec_lumpy-denim-alligator
+        - /usr/bin/env sh .sqa/script.grumpy-linen-snake.sh
+        container: qc.sec_scaly-sepia-oriole
   QC.Sty:
     repos:
       github.com/grycap/im flake8:
         commands:
-        - /usr/bin/env sh .sqa/script.woozy-gold-wildebeest.sh
-        container: qc.sty_baggy-saffron-bullfrog
+        - /usr/bin/env sh .sqa/script.breezy-russet-bat.sh
+        container: qc.sty_skimpy-lemon-tortoise
       github.com/grycap/im hadolint:
         commands:
-        - /usr/bin/env sh .sqa/script.ready-burgundy-beagle.sh
-        container: qc.sty_muggy-peach-angelfish
+        - /usr/bin/env sh .sqa/script.slimy-ruby-rattlesnake.sh
+        container: qc.sty_foggy-orange-cougar
       github.com/grycap/im jsonlint:
         commands:
-        - /usr/bin/env sh .sqa/script.gamy-blue-mongrel.sh
-        container: qc.sty_skimpy-peach-stoat
+        - /usr/bin/env sh .sqa/script.pretty-auburn-tiger.sh
+        container: qc.sty_snoopy-tan-gibbon
       github.com/grycap/im rubocop:
         commands:
-        - /usr/bin/env sh .sqa/script.flabby-chocolate-badger.sh
-        container: qc.sty_lovely-russet-penguin
+        - /usr/bin/env sh .sqa/script.beady-firebrick-bombay.sh
+        container: qc.sty_lousy-green-penguin
       github.com/grycap/im stylelint:
         commands:
-        - /usr/bin/env sh .sqa/script.freaky-bronze-mayfly.sh
-        container: qc.sty_messy-cerise-falcon
+        - /usr/bin/env sh .sqa/script.nippy-razzmatazz-affenpinscher.sh
+        container: qc.sty_snippy-charcoal-heron
   QC.Ver:
     repos:
       github.com/grycap/im get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.snoopy-magnolia-zorse.sh
-        container: qc.ver_geeky-azure-goat
+        - /usr/bin/env sh .sqa/script.whiny-white-antelope.sh
+        container: qc.ver_foggy-cobalt-robin
 timeout: 1800
